# videpipeplus

./: CMakeLists.txt  README.md  convert.py
Videopipeweb/: package-lock.json
Videopipeweb/videopipe/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.json
Videopipeweb/videopipe/src/: App.vue  main.js  router.js
Videopipeweb/videopipe/src/assets/: main.css
Videopipeweb/videopipe/src/assets/font/: INSTRUCTION.txt  font.css
Videopipeweb/videopipe/src/components/: CustomNode_OSD.vue  CustomNode_inference.vue  CustomNode_input.vue  CustomNode_output.vue  CustomNode_rtmp.vue  InferDeivces.vue  InputBox.vue  Msgshow.vue  VideoInfer.vue  useDnD.js
docs/: WPS Office.lnk
nodes/: vp_des_node.cpp  vp_file_des_node.cpp  vp_file_des_node.h  vp_file_src_node.cpp  vp_file_src_node.h  vp_infer_node.cpp  vp_infer_node.h  vp_meta_publisher.cpp  vp_meta_subscriber.h  vp_node.cpp  vp_node.h  vp_primary_infer_node.cpp  vp_primary_infer_node.h  vp_screen_des_node.cpp  vp_screen_des_node.h  vp_secondary_infer_node.cpp  vp_secondary_infer_node.h  vp_sever_control_node.cpp  vp_sever_control_node.h  vp_src_node.cpp  vp_src_node.h
nodes/broker/cereal_archive/: vp_objects_cereal_archive.h
nodes/infers/: sfczdvsdfvadvcas.cpp  sfczdvsdfvadvcas.h  vp_classifier_node.cpp  vp_classifier_node.h  vp_feature_encoder_node.cpp  vp_feature_encoder_node.h  vp_fire_dtect_node_tpu.cpp  vp_fire_dtect_node_tpu.h  vp_general_infer_node.cpp  vp_general_infer_node.h  vp_mobilenet_edgetpu_face_node.cpp  vp_mobilenet_edgetpu_face_node.h  vp_mobilenet_edgetpu_object_node.cpp  vp_mobilenet_edgetpu_object_node.h  vp_openpose_detector_node.cpp  vp_openpose_detector_node.h  vp_plate_detect_node_tpu.cpp  vp_plate_detect_node_tpu.h  vp_plate_ocr_node_tpu.cpp  vp_plate_ocr_node_tpu.h  vp_sface_feature_encoder_node.cpp  vp_sface_feature_encoder_node.h  vp_yunet_face_detector_node.cpp  vp_yunet_face_detector_node.h
nodes/osd/: vp_face_osd_node.cpp  vp_face_osd_node_v2.cpp
nodes/track/: vp_sort_track_node.cpp  vp_sort_track_node.h
nodes/track/sort/: Hungarian.h
objects/: vp_control_meta.h  vp_frame_face_target.cpp  vp_frame_face_target.h  vp_frame_meta.h  vp_frame_target.cpp  vp_frame_target.h  vp_meta.h
sample/: 1-1-1_sample.cpp  1-1-1_sample_tpu.cpp  111.cpp  222.cpp  VP.h  face_tracking_sample.cpp  face_tracking_sample_tpu.cpp  interaction_with_pipe_sample.cpp  object_sample_tpu.cpp  plate_detect_sample_tpu.cpp
yolov5/: detect.py
yolov5/saved_model/: fingerprint.pb
yolov5/saved_model/variables/: variables.data-00000-of-00001  variables.index
yolov5/utils/: general.py
yolov5/yolov5s_best_openvino_model/: yolov5s_best.xml  yolov5s_best.yaml
yolov5/yolov5s_best_saved_model/: fingerprint.pb
